[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://BossIntro.gd" type="Script" id=2]
[ext_resource path="res://Assets/EventBG.png" type="Texture" id=3]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=4]

[node name="BossIntro" type="Node2D"]
script = ExtResource( 2 )

[node name="TextBox" parent="." instance=ExtResource( 1 )]

[node name="bossIntroBG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[connection signal="textbox_done" from="TextBox" to="." method="_on_TextBox_textbox_done"]
